[package]
name = "starknet-event-query"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
eyre = "0.6.12"
glob = "0.3.3"
itertools = "0.14.0"
pretty_assertions_sorted = "1.2.3"
regex = "1.12.2"
serde_json = "1.0.145"
starknet = "0.17.0"
starknet-tokio-tungstenite = "0.3.0"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std", "time"] }

